--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "jquery": "^3.6.0",
+    "lightpick": "^1.6.2",
+    "litepicker": "^2.0.12",
     "mermaid.cli": "^0.5.1",
     "moment": "^2.29.4"
   }
