--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bootstrap-icons": "^1.9.1",
     "jquery": "^3.6.0",
     "lightpick": "^1.6.2",
     "litepicker": "^2.0.12",
