test de formularios reg res y reg huesped

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 asgiref==3.5.2
+Babel==2.10.3
 beautifulsoup4==4.11.1
 black==22.6.0
 click==8.1.3
 colorama==0.4.5
 DateRangeParser==1.3.2
 Django==4.0.6
-django-bootstrap-datepicker-plus==4.0.0
-django-bootstrap-daterangepicker==1.0.6
 django-bootstrap4==22.1
-django-bootstrap5==21.3
 django-crispy-forms==1.14.0
 django-extensions==3.2.0
+django-filter==22.1
+djangorestframework==3.13.1
 lazy-object-proxy==1.7.1
+Markdown==3.4.1
 mypy-extensions==0.4.3
 pathspec==0.9.0
 Pillow==9.2.0
@@ -19,8 +20,10 @@ platformdirs==2.5.2
 psycopg2==2.9.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
+pytz==2022.1
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 tomli==2.0.1
+typing_extensions==4.3.0
 tzdata==2022.1
