--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,56 @@
 asgiref==3.5.2
+atomicwrites==1.4.1
+attrs==22.1.0
 Babel==2.10.3
 beautifulsoup4==4.11.1
 black==22.6.0
 click==8.1.3
 colorama==0.4.5
+coverage==6.4.2
+cssbeautifier==1.14.4
 DateRangeParser==1.3.2
 Django==4.0.6
+django-bootstrap-datepicker-plus==4.0.0
+django-bootstrap-daterangepicker==1.0.6
 django-bootstrap4==22.1
+django-bootstrap5==21.3
 django-crispy-forms==1.14.0
 django-extensions==3.2.0
 django-filter==22.1
+django-money==3.0.0
 djangorestframework==3.13.1
+djlint==1.9.2
+EditorConfig==0.12.3
+html-tag-names==0.1.2
+html-void-elements==0.1.0
+importlib-metadata==4.12.0
+iniconfig==1.1.1
+isort==5.10.1
+jsbeautifier==1.14.4
 lazy-object-proxy==1.7.1
 Markdown==3.4.1
 mypy-extensions==0.4.3
+packaging==21.3
 pathspec==0.9.0
 Pillow==9.2.0
 platformdirs==2.5.2
+pluggy==1.0.0
 psycopg2==2.9.3
+py==1.11.0
+py-moneyed==2.0
+pydotplus==2.0.2
 pyparsing==3.0.9
+pytest==7.1.2
+pytest-cov==3.0.0
 python-dateutil==2.8.2
 pytz==2022.1
+PyYAML==6.0
+regex==2022.7.25
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 tomli==2.0.1
+tqdm==4.64.0
 typing_extensions==4.3.0
 tzdata==2022.1
+zipp==3.8.1
