--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "litepicker": "^2.0.12",
     "mermaid.cli": "^0.5.1",
     "moment": "^2.29.4",
-    "package.json": "^2.0.1"
+    "package.json": "^2.0.1",
+    "prettier": "^2.7.1"
   }
 }
