--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ attrs==22.1.0
 Babel==2.10.3
 beautifulsoup4==4.11.1
 black==22.6.0
+certifi==2022.6.15
+charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 coverage==6.4.2
@@ -12,9 +14,11 @@ DateRangeParser==1.3.2
 Django==4.0.6
 django-bootstrap-datepicker-plus==4.0.0
 django-bootstrap-daterangepicker==1.0.6
+django-bootstrap-icons==0.8.1
 django-bootstrap4==22.1
 django-bootstrap5==21.3
 django-crispy-forms==1.14.0
+django-dbbackup==4.0.1
 django-extensions==3.2.0
 django-filter==22.1
 django-money==3.0.0
@@ -23,6 +27,7 @@ djlint==1.9.2
 EditorConfig==0.12.3
 html-tag-names==0.1.2
 html-void-elements==0.1.0
+idna==3.3
 importlib-metadata==4.12.0
 iniconfig==1.1.1
 isort==5.10.1
@@ -30,6 +35,7 @@ jsbeautifier==1.14.4
 lazy-object-proxy==1.7.1
 Markdown==3.4.1
 mypy-extensions==0.4.3
+numpy==1.23.2
 packaging==21.3
 pathspec==0.9.0
 Pillow==9.2.0
@@ -46,6 +52,7 @@ python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==6.0
 regex==2022.7.25
+requests==2.28.1
 six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
@@ -53,4 +60,5 @@ tomli==2.0.1
 tqdm==4.64.0
 typing_extensions==4.3.0
 tzdata==2022.1
+urllib3==1.26.12
 zipp==3.8.1
